// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2F7ET"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___1T08_"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___2nEc2"
    >
      
    </p>
  </div>
  <p>
    Your submission has been received, and will be evaluated during Review phase.
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___2cGOY"
  >
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-btn___3JEBh"
    >
      <a
        className="tc-btn-default src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___1Uom3"
        href=""
      >
        Help
      </a>
    </div>
  </div>
</div>
`;

exports[`Snapshot match 2`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2F7ET"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___1T08_"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___2nEc2 src-shared-components-SubmissionManagement-ScreeningDetails-___styles__failed___3WU4E"
    >
      Failed Screening
    </p>
  </div>
  <p>
    You have failed screening
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___2cGOY"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__more-info___2erWn"
    >
      Need more info on how to pass screening? Go to help to read Rules & Policies.
    </p>
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-btn___3JEBh"
    >
      <a
        className="tc-btn-default src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___1Uom3"
        href=""
      >
        Help
      </a>
    </div>
  </div>
</div>
`;

exports[`Snapshot match 3`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2F7ET"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___1T08_"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___2nEc2 src-shared-components-SubmissionManagement-ScreeningDetails-___styles__failed___3WU4E"
    >
      Failed Screening with Warnings
    </p>
  </div>
  <p>
    You have failed screening and the screener has given you the following warning.
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___2cGOY"
  >
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___2cGOY"
    >
      <div
        className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__warning-bold___18Pyq"
      >
        <span>
          Warning
        </span>
         
        1 : Brief #0
      </div>
      <p>
        Details #0
      </p>
    </div>
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__more-info___2erWn"
    >
      Need more info on how to pass screening? Go to help to read Rules & Policies.
    </p>
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-btn___3JEBh"
    >
      <a
        className="tc-btn-default src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___1Uom3"
        href=""
      >
        Help
      </a>
    </div>
  </div>
</div>
`;

exports[`Snapshot match 4`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2F7ET"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___1T08_"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___2nEc2 src-shared-components-SubmissionManagement-ScreeningDetails-___styles__passed___R6PRn"
    >
      Passed Screening
    </p>
  </div>
  <p>
    You have passed screening.
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___2cGOY"
  >
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-btn___3JEBh"
    >
      <a
        className="tc-btn-default src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___1Uom3"
        href=""
      >
        Help
      </a>
    </div>
  </div>
</div>
`;

exports[`Snapshot match 5`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2F7ET"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___1T08_"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___2nEc2 src-shared-components-SubmissionManagement-ScreeningDetails-___styles__passed___R6PRn"
    >
      Passed Screening with Warnings
    </p>
  </div>
  <p>
    You have passed screening, but the screener has given you 1 warnings that you must fix in round 2.
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___2cGOY"
  >
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___2cGOY"
    >
      <div
        className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__warning-bold___18Pyq"
      >
        <span>
          Warning
        </span>
         
        1 : Brief #0
      </div>
      <p>
        Details #0
      </p>
    </div>
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__more-info___2erWn"
    >
      Need more info on how to pass screening? Go to help to read Rules & Policies.
    </p>
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-btn___3JEBh"
    >
      <a
        className="tc-btn-default src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___1Uom3"
        href=""
      >
        Help
      </a>
    </div>
  </div>
</div>
`;

exports[`Snapshot match 6`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2F7ET"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___1T08_"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___2nEc2 src-shared-components-SubmissionManagement-ScreeningDetails-___styles__pending___3LIdf"
    >
      Pending
    </p>
  </div>
  <p>
    Your submission has been received, and will be screened after the end of the phase
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___2cGOY"
  >
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___2cGOY"
    >
      <div
        className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__warning-bold___18Pyq"
      >
        <span>
          Warning
        </span>
         
        1 : Brief #0
      </div>
      <p>
        Details #0
      </p>
    </div>
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-btn___3JEBh"
    >
      <a
        className="tc-btn-default src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___1Uom3"
        href=""
      >
        Help
      </a>
    </div>
  </div>
</div>
`;
